[gd_scene load_steps=4 format=3 uid="uid://b8kd7rh3lk2m9"]

[ext_resource type="Script" path="res://scripts/dialogue_system.gd" id="1_dialogue"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_1"]
default_font_size = 16

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_dialogue")
typing_speed = 0.03
auto_continue = false
auto_continue_delay = 2.5

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SpeakerLabel" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = -155.0
theme = SubResource("Theme_1")
theme_override_font_sizes/font_size = 18
text = "Speaker Name"
horizontal_alignment = 0
vertical_alignment = 1

[node name="Portrait" type="TextureRect" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 5

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 35.0
offset_right = -130.0
offset_bottom = -50.0
theme = SubResource("Theme_1")
bbcode_enabled = true
text = "Dialogue text appears here..."
fit_content = true
scroll_active = false

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = -5.0

[node name="ContinueButton" type="Button" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
text = "Continue â†’"

[node name="BackgroundDimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.3)
z_index = -1

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = false

[node name="AutoContinueTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = false

[connection signal="pressed" from="DialogueBox/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="TypewriterTimer" to="." method="_on_typewriter_timeout"]
[connection signal="timeout" from="AutoContinueTimer" to="." method="_on_auto_continue_timeout"]